@@ -113,7 +113,10 @@ void ClientManager::add(Client* client)
     clients_[client->window_] = client;
     client->needsRelayout.connect(needsRelayout);
     client->floating_.changed().connect([this,client]() {
-        this->floatingStateChanged.emit(client);
+        this->clientStateChanged.emit(client);
+    });
+    client->minimized_.changed().connect([this,client]() {
+        this->clientStateChanged.emit(client);
     });
     addChild(client, client->window_id_str);
 }
@@ -436,6 +439,12 @@ void ClientManager::force_unmanage(Client* client) {
     tag_set_flags_dirty();
     // delete client
     this->remove(client->window_);
+    if (client == focus()) {
+        // this should never happen because we forced a relayout
+        // of the client's tag, so 'focus' must have been updated
+        // in the meantime. Anyway, lets be safe:
+        focus = nullptr;
+    }
     delete client;
 }
 
